--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,6 @@ if(COMMAND cmake_policy)
     cmake_policy(SET CMP0017 NEW)
 endif(COMMAND cmake_policy)
 include(ExternalProject)
-# PROJECT(OpenSoT)
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
 
 if ( EIGEN3_FOUND )
   INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS})
@@ -37,11 +34,10 @@ include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
+INCLUDE_DIRECTORIES(src)
 
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
-
-ADD_LIBRARY(test_dany_bb  SHARED pacman_bb_test.cpp )
+ADD_LIBRARY(test_dany_bb  SHARED src/pacman_bb_test.cpp
+                                 src/pacman_bb_test.h )
                             # pacman_bbox/src/BoundingBox.cpp
                             # pacman_bbox/src/bounding.cpp
                             # pacman_bbox/include/pacman_bb.hpp
@@ -49,70 +45,7 @@ ADD_LIBRARY(test_dany_bb  SHARED pacman_bb_test.cpp )
                             # pacman_bb_test.cpp )
                             # pacman_bb_utils_test.cpp)
 TARGET_LINK_LIBRARIES(test_dany_bb PUBLIC ${PCL_LIBRARIES} ${CGAL_LIBRARIES} ${EIGEN_LIBRARIES})
-#                                       example_klampt_controller.h
-#                                       src/KlamptController.cpp
-#                                       include/KlamptController.h
-#                                       include/utils.h)
-
-# ADD_DEPENDENCIES(example_klampt_controller OpenSoT)
-# ADD_DEPENDENCIES(klampt_controller example_klampt_controller)
-
-# TARGET_LINK_LIBRARIES(test_dany_bb PUBLIC OpenSoT ${idynutils_LIBRARIES} ${Boost_LIBRARIES})
-
-# TARGET_LINK_LIBRARIES(test_dany_bb_file         PUBLIC test_dany_bb)
 
 install(TARGETS test_dany_bb DESTINATION lib)
 
-find_package(SWIG)
-if(SWIG_FOUND)
-    include(UseSWIG)
-
-    set_source_files_properties(Test_interface_dany_bb.i PROPERTIES CPLUSPLUS ON )
-   
-
-    set(CMAKE_${lang}_VERBOSE_FLAG "-v")
-    set(CMAKE_${lang}_COMPILE_OPTIONS_PIC "-fPIC")
-    if(NOT CMAKE_${lang}_COMPILER_VERSION VERSION_LESS 3.4)
-     set(CMAKE_${lang}_COMPILE_OPTIONS_PIE "-fPIE")
-    endif()
-    if(NOT CMAKE_${lang}_COMPILER_VERSION VERSION_LESS 4.0)
-     set(CMAKE_${lang}_COMPILE_OPTIONS_VISIBILITY "-fvisibility=")
-    endif()
-    set(CMAKE_SHARED_LIBRARY_${lang}_FLAGS "-fPIC")
-    set(CMAKE_SHARED_LIBRARY_CREATE_${lang}_FLAGS "-shared")
-    set(CMAKE_${lang}_COMPILE_OPTIONS_SYSROOT "--sysroot=")
-
-
-
-    include_directories(. include)
-    link_libraries(test_dany_bb)
-
-    set(CMAKE_SWIG_FLAGS "-Wall;-module;Exampletest_dany_bb;-threads")
-
-        set(OPENSOT_USES_PYTHON_VERSION "" CACHE STRING "Specify python version to use" )
-
-        find_package(PythonInterp ${OPENSOT_USES_PYTHON_VERSION} REQUIRED)
-        set(OPENSOT_USES_PYTHON_VERSION_ARGS)
-        if(NOT OPENSOT_USES_PYTHON_VERSION)
-          set (OPENSOT_USES_PYTHON_VERSION ${PYTHON_VERSION_STRING})
-        endif()
-
-        find_package(PythonLibs ${OPENSOT_USES_PYTHON_VERSION} EXACT)
-        include_directories(${PYTHON_INCLUDE_PATH})
-        link_libraries(${PYTHON_LIBRARY})
-
-        set(target_name Exampletest_dany_bb)
-        
-
-        swig_add_module(${target_name} python Test_interface_dany_bb.i)
-        set_target_properties(_${target_name} PROPERTIES OUTPUT_NAME "_Exampletest_dany_bb")
-        set_target_properties(_${target_name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/python)
-
-        # installation path is determined reliably on most platforms using distutils
-        execute_process(COMMAND ${PYTHON_EXECUTABLE}
-            -c "from distutils import sysconfig; print(sysconfig.get_python_lib(1,0,prefix=''))"
-        OUTPUT_VARIABLE PYTHON_INSTDIR OUTPUT_STRIP_TRAILING_WHITESPACE )
-        install(FILES ${CMAKE_CURRENT_BINARY_DIR}/Exampletest_dany_bb.py DESTINATION ${PYTHON_INSTDIR} )
-        install(TARGETS _${target_name} DESTINATION ${PYTHON_INSTDIR} )
-
-endif(SWIG_FOUND)
+ADD_SUBDIRECTORY(python)
